src/styles.css
:root {
  --toast-background-color: white;
  --toast-shadow: #333333;

  --font-color-message: #848484;
  --font-color-title: #2b2b2b;

  --toast-alert: #f19109;
  --toast-alert-bg-color: #f1910930;
  --toast-success: #2bd741;
  --toast-success-bg-color: #2bd74130;
  --toast-error: #e53435;
  --toast-error-bg-color: #e5343530;
  --toast-info: #0f5efe;
  --toast-info-bg-color: #0f5efe30;
}

.toast-container {
  position: absolute;
  top: 5%;
  right: 5%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.toast {
  background-color: var(--toast-background-color);
  border-radius: 16px;
  padding: 1rem 1.2rem 1.3em 1.2rem;
  gap: 0.8rem;
  box-shadow: 0 0 2px var(--toast-shadow);
  display: flex;
  align-items: center;
  position: relative;
  overflow: hidden;
}

.toast-enter {
  animation: slideIn 0.3s ease-out forwards;
}

.toast-exit {
  animation: slideOut 0.3s ease-in forwards;
}

.toast-icon-container {
  padding: 0.5rem;
  background-color: lightgrey;
  border-radius: 6px;
}

.toast-icon-success {
  background-color: var(--toast-success-bg-color);
  color: var(--toast-success);
}

.toast-icon-error {
  background-color: var(--toast-error-bg-color);
  color: var(--toast-error);
}

.toast-icon-info {
  background-color: var(--toast-info-bg-color);
  color: var(--toast-info);
}

.toast-icon-warning {
  background-color: var(--toast-alert-bg-color);
  color: var(--toast-alert);
}

.toast-text-container {
  display: flex;
  flex-direction: column;
  width: 18rem;
}

.toast-title {
  font-size: 1.125rem;
  font-weight: 500;
  color: var(--font-color-title);
}

.toast-message {
  font-size: 0.875rem;
  color: var(--font-color-message);
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.toast-progress {
  position: absolute;
  bottom: -8px;
  left: 0;
  height: 16px;
  border-radius: 8px;
  width: 100%;

  animation: shrink 3s linear forwards;
}

.toast-progress-success {
  background-color: var(--toast-success);
}

.toast-progress-error {
  background-color: var(--toast-error);
}

.toast-progress-info {
  background-color: var(--toast-info);
}

.toast-progress-warning {
  background-color: var(--toast-alert);
}

@keyframes shrink {
  from {
    width: 100%;
  }
  to {
    width: 0%;
  }
}

@keyframes slideIn {
  from {
    transform: translateX(100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideOut {
  from {
    transform: translateX(0);
    opacity: 1;
  }
  to {
    transform: translateX(100%);
    opacity: 0;
  }
}

